// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHelpLink returns correct link for emailTemplates 1`] = `"docs.cxengage.net/Help/Content/Configuration/Email_Templates/Updating_Email_Templates.htm"`;

exports[`getHelpLink returns correct link for lists 1`] = `"docs.cxengage.net/Help/Content/Configuration/Lists/Lists.htm"`;

exports[`getTableColumns lists returns correct columns 1`] = `
Array [
  "mock name column",
  "mock list type column",
  "mock status column",
]
`;

exports[`getTableColumns returns correct columns for emailTemplates 1`] = `
Array [
  "mock name column",
  "mock description column",
]
`;
